--- a/02_实验2实验报告.md
+++ b/02_实验2实验报告.md
@@ -604,6 +604,12 @@ exit3	pop edx
 
 # Assignment4 弹射程序
 
+******
+
+**警告：该报告中的思路与代码有瑕疵，请谨慎使用。**
+
+*******
+
 ## 4.1 算法思路
 
 因为有反射弹回的设计，因此我们需要两个变量，用来记录此时字符的位置。当字符的位置超过屏幕边界时就将变量从加变减。从而实现字符位置的”弹射“。
